[package]
name = "dbus-udisks2"
version = "0.3.0"
edition = "2018"
description = "UDisks2 DBus API"
repository = "https://github.com/pop-os/dbus-udisks2"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
dbus = "0.9.0"
num_enum = "0.5.1"
futures-util = { version = "0.3", features = ["async-await"], optional = true }

[dev-dependencies]
tokio = { version = "0.2.4", features = ["macros"] }
dbus-tokio = "0.6.0"

[features]
futures = ["dbus/futures", "futures-util"]

[package.metadata.docs.rs]
all-features = true
